# period-diagnostic

./: .gitignore  README.md  pyproject.toml  requirements.txt
orcd/: submit_rnn_seeds.sh  train_rnn_seed.slurm
scripts/: cache_25k_lcs.py  diag_mlp_and_ci.py  diag_per_layer.py  diag_period_template_match.py  diag_seed_ci.py  embed_astromer_25k.py  embed_chronos_25k.py  embed_chronos_t5_25k.py  embed_ct_burdge.py  embed_moment_25k.py  embed_moment_from_scratch_25k.py  embed_patchtst_25k.py  embed_rnn_seeds.sh  embed_seq_baseline_25k.py  make_diagnostic_curve_cr.py  probe_25k.py  probe_classical_rf_full.py  probe_period_recovery.py  subset_chen2020_25k.py
src/baselines/: chronos_t5.py  moment_from_scratch.py  patchtst.py  seq_encoders.py  train_seq_baseline.py
src/data/: augmentations.py  build_index.py  build_index_from_catalog.py  matchfile_dataset.py  preextract.py  preprocessing.py  ztf_loader.py
src/model/: continuous_time_transformer.py  fourier_embedding.py  losses.py  transformer.py  utils.py
src/training/: train_ct_ddp.py  train_ddp.py
