[project]
name = "period-diagnostic"
version = "0.1.0"
description = "Template Matching, Not Time Learning: a diagnostic for self-supervised light-curve encoders (AI4Physics @ ICML 2026)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "h5py>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "astropy>=5.3.0",
    "tqdm>=4.65.0",
]
